(chores) camel-consul: use unmodifiable list when possible